--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.117.0",
+    "@react-three/fiber": "^8.17.10",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
