--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.117.0",
     "@react-three/fiber": "^8.17.10",
+    "aos": "^3.0.0-beta.6",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
