--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
     "swiper": "^11.1.14",
+    "tailwindcss-text-stroke": "^0.0.5",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
