--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.14",
     "tailwindcss-text-stroke": "^0.0.5",
     "typed.js": "^2.1.0"
